# wiffy

./: .flake8  .gitignore  .isort  .isort.cfg  .pre-commit-config.yaml  README.md  exceptions.py  gui.py  main.py  parser.py  pre-commit  pre-commit-config.yaml  pyproject.toml  requirements.txt  songs_classes.py  utils.py  widgets.py  wiffy_parser.py
chromedriver/extensions/: Adblock-Plus.crx
utils/: counters.py  driver.py  formatting.py  logger.py  paths.py  threads.py  user_data.py  validation.py
wiffy_gui/: app.py  config.py  core.py  download.py  parsing.py  text.py
wiffy_gui/items/: buttons.py  custom.py  forms.py  frames.py  labels.py  progressbar.py
wiffy_gui/layout/: dir_menu.py  download_menu.py  login.py  main_menu.py  show_songs_menu.py
wiffy_gui/layout/download/: dir_menu.py  download_menu.py  widgets.py
wiffy_parser/: core.py  download.py  html.py  selenium.py  songs_data.py
